[package]
name = "async-read-utils"
version = "0.1.0"
authors = ["Gregory C. Oakes <gregcoakes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.14"
pin-project = "1.0.7"

[dev-dependencies]
rand = "0.8.3"
smol-potat = "1.1.2"
