[package]
name = "async-read-util"
version = "0.1.0"
authors = ["Gregory C. Oakes <gregcoakes@gmail.com>"]
edition = "2018"
description = "A collection of utilities for working with AsyncRead."
documentation = "https://docs.rs/async-read-util"
readme = "README.md"
homepage = "https://github.com/gcoakes/async-read-util"
repository = "https://github.com/gcoakes/async-read-util"
license = "MIT"
keywords = ["async"]

[dependencies]
futures = "0.3.14"
pin-project = "1.0.7"

[dev-dependencies]
rand = "0.8.3"
smol-potat = "1.1.2"
